--- a/plan_graph.html
+++ b/plan_graph.html
@@ -1,5 +1,104 @@
 <!DOCTYPE html>
-<object data="https://raw.githubusercontent.com/martinrupp/martinrupp.github.io/master/tools/splice_plan/plan_graph.html"> 
-    Your browser doesn’t support the object tag. 
-</object>
+<html>
+    <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width">
+    <title> Simple Splice Plan Graph Viewer </title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<p>A <i>very</i> simple <a href=http://splicemachine.com/>SpliceMachine</a> Plan Graph Viewer (Copyright © 2020 Martin Rupp / SpliceMachine).
+(Tree printing is done with the awesome <a href=https://github.com/fperucic/treant-js>https://github.com/fperucic/treant-js</a> by Fran Peručić)
+<br>Enter the text returned by <a href=https://doc.splicemachine.com/cmdlineref_explainplan.html>explain command</a>, or choose from examples: 
+    <select onchange="fill_example(this.value)">
+      <option value="empty">empty</option>
+      <option selected value="simple_join">Simple Join</option>
+      <option value="ds_11">TPC-DS 11</option>
+      <option value="ds_74">TPC-DS 74</option>
+      <option value="ds_20xt">TPC-DS 20xt</option>
+    </select>
+  </label>
+  <br>
+
+<textarea id="plan_text" rows="4" cols="200">...</textarea>
+<br>
+<button type="button" onclick="generate()">Generate</button>
+
+    <script src="https://fperucic.github.io/treant-js/vendor/raphael.js"></script>
+    <script src="Treant.js"></script>
+    <script src="parse_splice_plan.js"></script>
+    <script src="example_plans.js"></script>
+    <script src="generate_treant_graph.js"></script>
+
+    <script>
+        var my_treant_tree = null;
+
+        function get_example_text(selected)
+        {
+            if( selected === "simple_join" )
+                return simple_join_example();
+            else if( selected === "ds_11" )
+                return get_ds_11_example();
+            else if( selected === "ds_74" )
+                return get_ds_74_example();
+            else if( selected === "ds_20xt" )
+                return get_ds_20xt_example();
+        }
+        function fill_example(selected)
+        {
+            var text = get_example_text(selected);
+            document.getElementById("plan_text").value = text;
+            if( text !== "" )
+                generate();
+
+        }
+
+        function generate()
+        {
+            var body = document.getElementsByTagName('body')[0];
+            var tbl = document.getElementById("splice_plan");
+            if ( tbl )
+            {
+                // this is a hack because i couldn't get Treant.js to update or delete the tree
+                body.removeChild(tbl);
+            }
+            // <div class="chart" id="splice_plan0"> --@-- </div>
+            var tbl = document.createElement('div');
+            tbl.setAttribute('class', "chart");
+            tbl.setAttribute("id", "splice_plan");
+            tbl.style.width = '100%';
+            body.appendChild(tbl);
+
+            var text = document.getElementById("plan_text").value;
+
+            var root_node = parse_splice_plan(text);
+            console.log(root_node);
+
+            // todo: replace with https://gojs.net/latest/samples/orgChartEditor.html
+
+            var config = {
+                container: "#splice_plan",
+                nodeAlign: "BOTTOM",
+
+                //rootOrientation:  'WEST',
+                levelSeparation:    20,
+                siblingSeparation:  15,
+                subTeeSeparation:   15,
+                connectors: {
+                    type: 'step'
+                },
+                node: {
+                    HTMLclass: 'nodeExample1',
+                }
+            };
+            // <div class="chart" id="custom-colored"> --@-- </div>
+
+            if( my_treant_tree )
+                delete my_treant_tree;
+            my_treant_tree = generate_treant_graph(config, root_node);
+        }
+        fill_example("simple_join");
+    </script>
+</body>
 </html>
